fix: Implement TopNavigation breakpoints in CSS
This commit switches from JavaScript-based breakpoints to CSS container
queries for TopNavigation, making its appearance consistent when
rendered with SSR.

To support container queries, we need `container-type: inline-size;` on
the TopNavigation root element. This causes overflowing content to get
clipped (at least in Safari), so I've enabled `expandToViewport` to
render utility dropdowns in a portal. Note that OverflowMenu doesn't
need this treatment because it expands the height of TopNavigation
rather than overflowing.

Fixes #3337

--- a/src/top-navigation/styles.scss
+++ b/src/top-navigation/styles.scss
@@ -6,10 +6,12 @@
 @use '../internal/styles' as styles;
 @use '../internal/styles/tokens' as awsui;
 @use '@cloudscape-design/component-toolkit/internal/focus-visible' as focus-visible;
+@use '../internal/styles/foundation/breakpoints' as breakpoints;
 
 .top-navigation {
   @include styles.styles-reset;
   background: awsui.$color-background-container-content;
+  container-type: inline-size;
 
   > .padding-box {
     display: flex;
@@ -22,18 +24,52 @@
     padding-inline-start: awsui.$space-xxl;
   }
 
-  &.medium > .padding-box,
-  &.narrow > .padding-box {
-    padding-inline-start: awsui.$space-l;
+  // Large container (width ≥ 912px)
+  @include breakpoints.container-breakpoint-up(breakpoints.$container-breakpoint-s) {
+    > .utilities > .utility-wrapper:last-of-type {
+      margin-inline-end: awsui.$space-m;
+    }
   }
 
-  &.medium > .padding-box {
-    block-size: calc(#{awsui.$space-xxxl} + #{awsui.$space-scaled-xs});
-    padding-inline-end: 0;
+  // Medium container (width < 912px)
+  @include breakpoints.container-breakpoint-down(breakpoints.$container-breakpoint-s) {
+    > .padding-box {
+      block-size: calc(#{awsui.$space-xxxl} + #{awsui.$space-scaled-xs});
+      padding-inline-start: awsui.$space-l;
+      padding-inline-end: 0;
+    }
+
+    > .utilities {
+      padding-inline-start: 0;
+    }
+
+    > .utilities > .utility-wrapper {
+      padding-inline: awsui.$space-m;
+    }
+
+    > .utilities > .utility-type-menu-dropdown:last-of-type {
+      padding-inline-end: 0;
+    }
+
+    > .utilities > .utility-wrapper:last-of-type {
+      margin-inline-end: awsui.$space-xxs;
+    }
   }
 
-  &.narrow > .padding-box {
-    block-size: awsui.$space-xxxl;
+  // Narrow container (width < 465px)
+  @include breakpoints.container-breakpoint-down(breakpoints.$container-breakpoint-xxs) {
+    > .padding-box {
+      block-size: awsui.$space-xxxl;
+      padding-inline-start: awsui.$space-l;
+    }
+
+    > .logo {
+      max-block-size: awsui.$space-xl;
+    }
+
+    > .utilities {
+      padding-inline-start: 0;
+    }
   }
 }
 
@@ -87,10 +123,6 @@
 
   // Setting an arbitrary min-width here discourages browser from lazy rendering
   min-inline-size: 10px;
-
-  &.narrow {
-    max-block-size: awsui.$space-xl;
-  }
 }
 
 .title {
@@ -129,11 +161,6 @@
 
   // Expand height of utilies fully so that the dropdown is anchored directly underneath it.
   block-size: 100%;
-
-  .medium > .padding-box > &,
-  .narrow > .padding-box > & {
-    padding-inline-start: 0;
-  }
 }
 
 .utility-wrapper {
@@ -171,7 +198,6 @@
   padding-inline: awsui.$space-s;
   align-items: stretch;
 
-  &:not(.narrow):last-of-type,
   &:not(.medium):last-of-type {
     padding-inline-end: 0;
   }
